--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 @layer components {
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     :root {
         --swiper-theme-color: #cbcbcb !important;
+    }
+    body {
+        font-family: 'Poppins', sans-serif;
     }
 }
